# DiceLAProgrammingTest

./: CMakeLists.txt  Constants.h  EntityManager.cpp  EntityManager.h  Main.cpp  TimeManager.cpp  TimeManager.h  World.cpp  World.h
Components/: CollisionComponent.h  Component.h  ComponentFlags.h  EnemyComponent.h  Entity.h  PlayerComponent.h  PositionComponent.h  SpriteRendererComponent.h
Systems/: ComponentSystem.cpp  ComponentSystem.h  SpriteRendererSystem.cpp  SpriteRendererSystem.h  System.h
